@@ -3,6 +3,10 @@ Changelog
 
 5.9.dev0 - (unreleased)
 -----------------------
+* Feature: Added possibility to add a fallback ePub file within context called
+  **action-download-epub** in order to temporarily stop dynamic ePub
+  generation and statically return this item.
+  [voineali refs #22970]
 
 5.8 - (2015-02-03)
 ------------------
